# p2p-chatter

./: Cargo.toml  LICENSE  README.md  cargo.toml
client/: Cargo.toml
client/src/: main.rs
src/: lib.rs  main.rs
