[package]
name = "p2p-chatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
futures = "0.3.1"
libp2p = { version = "0.45.1", features = ["tcp-tokio", "mdns"] }
log = "0.4"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }