[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = "0.6"
bytes = "1"
either = "1.6.0"
futures = "0.3.1"
futures-timer = "3.0"
instant = "0.1.11"
libp2p-core = "0.33.0"
libp2p-swarm = "0.36.1"
log = "0.4"
prost-codec = "0.1"
prost = "0.10"
thiserror = "1.0"
void = "1"
libp2p = { version = "0.45.1", default-features = false,  features = ["dcutr", "relay", "plaintext", "identify", "tcp-async-io", "ping", "noise", "dns-async-std"] }
clap = {version = "3.1.6", features = ["derive"]}
env_logger = "0.8.3"
libp2p-identify = "0.36.1"
libp2p-plaintext = "0.33.0"
libp2p-relay = "0.9.1"
libp2p-yamux = "0.37.0"
rand = "0.7"

[build-dependencies]
prost-build = "0.10"

